--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -45,6 +45,11 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      # Set environment variables
+      - name: Set environment variables from GitHub Secrets
+        run: |
+          echo "REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}" >> .env
+
       # Build React app using Webpack
       - name: Build React App
         run: |
@@ -57,11 +62,11 @@ jobs:
           ls -R ./  # List files in the current directory to see if build folder exists
 
       # List contents of the build directory if it exists
-      - name: List contents of build directory
-        run: |
-          echo "Listing contents of the build directory"
-          ls -R ./build  # List contents recursively to make sure ./build is created
-        continue-on-error: false
+      # - name: List contents of build directory
+      #   run: |
+      #     echo "Listing contents of the build directory"
+      #     ls -R ./build  # List contents recursively to make sure ./build is created
+      #   continue-on-error: false
 
   # Step 2: Deploy to AWS S3
   deploy:
@@ -100,63 +105,3 @@ jobs:
       #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     AWS_REGION: ${{ secrets.AWS_REGION }}
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   if: github.ref == 'refs/heads/deploy_dashboard_app'
-
-  #   defaults:
-  #     run:
-  #       working-directory: ./apps/dashboard-app # Set working directory here for deploy job
-
-  #   steps:
-  #     # Checkout the code to the root of the repository
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v3
-
-  #     # Debug: List files in the root directory again
-  #     - name: List files in the root directory again
-  #       run: |
-  #         echo "Listing files in the root of the repository"
-  #         tree -L 2  # Confirm directory structure
-
-  #     # Set up Node.js
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: "20"
-
-  #     # Step 1: Install Dependencies
-  #     - name: Install Dependencies
-  #       run: npm install
-
-  #     # Debug: List files in the build directory
-  #     - name: List files in the build directory
-  #       run: |
-  #         echo "Listing files in the build directory"
-  #         tree -L 2  # Check if the build directory exists
-
-  #     # Deploy to S3
-  #     - name: Deploy to S3
-  #       uses: jakejarvis/s3-sync-action@v0.5.1
-  #       with:
-  #         args: --acl public-read --delete
-  #       env:
-  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-  #         AWS_REGION: ${{ secrets.AWS_REGION }}
-  #         SOURCE_DIR: "./build" # Correct build directory path
-
-  # Optional: Invalidate CloudFront cache (if using CloudFront)
-  # - name: Invalidate CloudFront Cache
-  #   if: success()
-  #   run: |
-  #     aws cloudfront create-invalidation \
-  #       --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} \
-  #       --paths "/*"
-  #   env:
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_REGION: ${{ secrets.AWS_REGION }}
