--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -24,7 +24,7 @@ jobs:
       - name: List files in the root directory
         run: |
           echo "Listing files in the root of the repository"
-          tree -L 2 # List the entire directory structure of the repository to verify if apps/dashboard-app exists
+          tree -L 3 # List the entire directory structure of the repository to verify if apps/dashboard-app exists
 
       # Step 2: Set up Node.js environment
       - name: Set up Node.js
@@ -59,7 +59,7 @@ jobs:
       - name: List files after build
         run: |
           echo "Listing files in the directory after build"
-          ls -R ./  # List files in the current directory to see if build folder exists
+          tree -L 2 ./  # List files in the current directory to see if build folder exists
 
       # List contents of the build directory if it exists
       # - name: List contents of build directory
