--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -75,17 +75,28 @@ jobs:
     if: success() # Only deploy if the build was successful
 
     steps:
-      # Checkout the repository code
+      # step 1:  Checkout the repository code
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Debug: List files in the root directory again
+      # step 2: Debug: List files in the root directory again
       - name: List files in the root directory again
         run: |
           echo "Listing files in the root of the repository"
           tree -L 2  # Confirm directory structure
 
-      # Deploy to S3 using AWS CLI
+      # step 3: Build app for Deploy to S3
+      - name: Build React App
+        run: |
+          npm run build  # This uses the build script in your package.json which runs Webpack
+
+      # step 4: in build folder
+      - name: List files in build folder
+        run: |
+          echo "Listing files in the directory after build"
+          tree -L 2 ./build  # List files in the current directory to see if build folder exists
+
+      # step 5: Deploy to S3 using AWS CLI
       - name: Deploy to S3 using AWS CLI
         run: |
           aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }} --delete --acl public-read
