--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -21,7 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
@@ -73,8 +74,7 @@
     "typescript": "^5.7.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "webpack-merge": "^6.0.1"
+    "webpack-dev-server": "^5.1.0"
   },
   "browserslist": {
     "production": [
