--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -21,8 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.27.0",
-    "webpack-merge": "^6.0.1"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
