--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -96,14 +96,17 @@ jobs:
           echo "Listing files in the directory after build"
           tree -L 2 ./build
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
       # step 6: Deploy to S3 using AWS CLI
       - name: Deploy to S3 using AWS CLI
         run: |
           aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }} --delete --acl public-read
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
       # Optional: Invalidate CloudFront cache (if using CloudFront)
       # - name: Invalidate CloudFront Cache
