--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -106,7 +106,7 @@ jobs:
       # step 6: Deploy to S3 using AWS CLI
       - name: Deploy to S3 using AWS CLI
         run: |
-          aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }} --delete --acl public-read
+          aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }}
 
       # Optional: Invalidate CloudFront cache (if using CloudFront)
       # - name: Invalidate CloudFront Cache
