--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -99,8 +99,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: AKIAZOZQFMN5OO6LHQCD
+          aws-secret-access-key: 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
           aws-region: ap-southeast-2
 
       # step 6: Deploy to S3 using AWS CLI
