--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -48,9 +48,9 @@ jobs:
           npm install
 
       # Set environment variables
-      - name: Set environment variables from GitHub Secrets
-        run: |
-          echo "REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}" >> .env
+      # - name: Set environment variables from GitHub Secrets
+      #   run: |
+      #     echo "REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}" >> .env
 
       # Build React app using Webpack
       - name: Build React App
@@ -58,10 +58,10 @@ jobs:
           npm run build
 
       # List files after build to check the build folder
-      - name: List files after build
-        run: |
-          echo "Listing files in the directory after build"
-          tree -L 2 ./
+      # - name: List files after build
+      #   run: |
+      #     echo "Listing files in the directory after build"
+      #     tree -L 2 ./
 
   # Step 2: Deploy to AWS S3
   deploy:
@@ -99,9 +99,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: AKIAZOZQFMN5OO6LHQCD
-          aws-secret-access-key: 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
-          aws-region: ap-southeast-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ADMIN }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ADMIN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       # step 6: Deploy to S3 using AWS CLI
       - name: Deploy to S3 using AWS CLI
