--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "add": "^2.0.6",
+    "apexcharts": "^4.1.0",
     "button": "^1.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.17",
@@ -21,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-apexcharts": "^1.7.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
