update on 09/Dec/2024, 04:02 PM

--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -14,7 +14,7 @@
     "start:local": "pm2 start ecosystem.local.config.js",
     "restart:local": "pm2 restart ecosystem.local.config.js",
     "stop:local": "pm2 stop ecosystem.local.config.js",
-    "start:prod": "NODE_ENV=production node ./server.js"
+    "start:prod": "node ./server.js"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
