--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "add": "^2.0.6",
+    "apexcharts": "^4.1.0",
     "button": "^1.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.17",
