--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -44,10 +44,12 @@
     "@storybook/test": "^8.3.6",
     "@storybook/test-runner": "^0.19.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/downloadjs": "^1.4.6",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^4.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "babel-loader": "^9.2.1",
@@ -56,6 +58,7 @@
     "css-loader": "^7.1.2",
     "daisyui": "^4.12.14",
     "dotenv-webpack": "^8.1.0",
+    "downloadjs": "^1.4.7",
     "html-webpack-plugin": "^5.6.3",
     "json-server": "^1.0.0-beta.3",
     "ms-ui-components": "*",
