--- a/apps/client-app/.env.production
+++ b/apps/client-app/.env.production
@@ -9,8 +9,8 @@ NEXT_PUBLIC_URL_PDASHBOARD=https://dgm6c7j4yhtsc.cloudfront.net
 
 #Auth
 #For Production
-NEXT_PUBLIC_AUTH_ENDPOINT=http://13.55.123.145:4001/v1/auth
-
+# NEXT_PUBLIC_AUTH_ENDPOINT=http://13.55.123.145:4001/v1/auth
+NEXT_PUBLIC_AUTH_ENDPOINT=https://d2q7ufjs6i4f5t.cloudfront.net/v1/auth
 
 
 NEXT_PUBLIC_SECRET_KEY=kf93!@nF3?/@rJQ2@kT6b%rTYqKq9t1n3F!qL
