--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline for Auth Service
 
 on:
   pull_request:
-    branches: [main]
+    branches: [deploy_auth_V1.0.0]
   push:
-    branches: [main]
+    branches: [deploy_auth_V1.0.0]
 
 defaults:
   run:
@@ -45,7 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/deploy_auth_V1.0.0'
 
     steps:
       - name: Checkout code
