--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -18,28 +18,35 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
+    "@sabaicode-dev/ms-libs": "0.0.2",
     "@sentry/node": "^8.37.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-useragent": "^1.0.15",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
-    "tsoa": "^6.3.1",
+    "node-device-detector": "^2.1.6",
     "swagger-ui-express": "^5.0.1",
-    "@sabaicode-dev/ms-libs": "0.0.2"
+    "tsoa": "^6.3.1",
+    "ua-parser-js": "^2.0.0",
+    "useragent": "^2.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "@types/express-useragent": "^1.0.5",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.14.7",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/ua-parser-js": "^0.7.39",
+    "@types/useragent": "^2.3.4",
     "esbuild": "^0.24.0",
     "nodemon": "^3.1.7",
     "pm2": "^5.4.2",
