add tracking device-info

--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -20,8 +20,10 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
     "@sabaicode-dev/ms-libs": "0.0.2",
     "@sentry/node": "^8.37.1",
+    "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "device-detector-js": "^3.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-useragent": "^1.0.15",
@@ -30,7 +32,6 @@
     "jwks-rsa": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
-    "node-device-detector": "^2.1.6",
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.3.1",
     "ua-parser-js": "^2.0.0",
