--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -35,7 +35,8 @@
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.3.1",
     "ua-parser-js": "^2.0.0",
-    "useragent": "^2.3.0"
+    "useragent": "^2.3.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
@@ -48,6 +49,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/ua-parser-js": "^0.7.39",
     "@types/useragent": "^2.3.4",
+    "@types/yup": "^0.29.14",
     "esbuild": "^0.24.0",
     "nodemon": "^3.1.7",
     "pm2": "^5.4.2",
