--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -32,6 +32,8 @@
     "jwks-rsa": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.3.1",
     "ua-parser-js": "^2.0.0",
@@ -45,6 +47,8 @@
     "@types/express-useragent": "^1.0.5",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mime-types": "^2.1.4",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.14.7",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/ua-parser-js": "^0.7.39",
