--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -21,6 +21,7 @@
     "@sabaicode-dev/ms-libs": "0.0.2",
     "@sentry/node": "^8.37.1",
     "axios": "^1.7.9",
+    "canvas": "^2.11.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "device-detector-js": "^3.0.3",
@@ -49,7 +50,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mime-types": "^2.1.4",
     "@types/multer-s3": "^3.0.3",
-    "@types/node": "^20.14.7",
+    "@types/node": "^20.17.10",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/ua-parser-js": "^0.7.39",
     "@types/useragent": "^2.3.4",
