--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -12,7 +12,9 @@
     "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "@codemirror/lang-sql": "^6.8.0",
     "@emailjs/browser": "^4.4.1",
+    "@uiw/react-codemirror": "^4.23.7",
     "add": "^2.0.6",
     "apexcharts": "^4.1.0",
     "button": "^1.1.1",
@@ -20,9 +22,9 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-apexcharts": "^1.7.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
