--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -18,6 +18,7 @@
     "add": "^2.0.6",
     "apexcharts": "^4.1.0",
     "button": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.462.0",
@@ -26,6 +27,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
