Refactor API endpoints to use environment variables for better configuration management

--- a/apps/dashboard-app/.env.production
+++ b/apps/dashboard-app/.env.production
@@ -8,3 +8,8 @@ REACT_APP_API_URL_AUTH_ENDPOINT=https://d2q7ufjs6i4f5t.cloudfront.net/v1/auth
 #URL
 
 REACT_APP_URL_DAVI=https://d3llp4uth9m31o.cloudfront.net
+
+#ENDPOINTS Django
+API_URL_DJANGO=http://3.24.110.41:8000/api/v1
+
+API_BEST_URL_DJANGO=http://127.0.0.1:8000
