fix: refactor code in axiosInstance & api endpoints

--- a/apps/backend/api-sample/src/configs/.env.development
+++ b/apps/backend/api-sample/src/configs/.env.development
@@ -1,3 +1,6 @@
+# THIS ENV FILE USED IN DEVELOPMENT MODE
+# BELOW IS THE SAMPLE OF ENVIRONMENT VIRABLES
+
 PORT = 5000
 NODE_ENV=development
 MONGODB_URL=http://localhost:5000
