--- a/apps/backend/auth-service/src/configs/.env.example
+++ b/apps/backend/auth-service/src/configs/.env.example
@@ -1,24 +1,25 @@
-PORT = 4001
-NODE_ENV = development
+PORT=4001
+NODE_ENV=development
 
 # MONGODB_URL
-MONGODB_URL=####
+MONGODB_URL=XXXX
 
 # AWS COGNITO CONFIGS
-AWS_COGNITO_REGION=####
-AWS_COGNITO_USER_POOL_ID=####
-AWS_COGNITO_CLIENT_ID=####
-AWS_COGNITO_CLIENT_SECRET=####
-AWS_COGNITO_IDENTITY_POOL_ID=####
-AWS_COGNITO_DOMAIN=####
-AWS_REDIRECT_URI=####
+AWS_COGNITO_REGION=XXXX
+AWS_COGNITO_USER_POOL_ID=XXXX
+AWS_COGNITO_CLIENT_ID=XXXX
+AWS_COGNITO_CLIENT_SECRET=XXXX
+AWS_COGNITO_DOMAIN=XXXX
+AWS_REDIRECT_URI=XXXX
 
 # SERVICE CONFIGS
-CLIENT_URL=####
-USER_SERVICE_URL=####
+CLIENT_URL=XXXX
 
 # AWS ACCESS KEY
-AWS_ACCESS_KEY_ID=####
-AWS_SECRET_ACCESS_KEY=####
+AWS_ACCESS_KEY_ID=XXXX
+AWS_SECRET_ACCESS_KEY=XXXX
+
+# BUCKET
+AWS_S3_BUCKET_NAME=XXXX
 
 SERVE_SWAGGER=true
