--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ web_modules/
 
 # dotenv environment variable files
 .env
-**/*.env.development
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
@@ -138,3 +138,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# Artifact Folder
+build
