--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -1,121 +1,121 @@
-name: Deploy React App to AWS S3
+# name: Deploy React App to AWS S3
 
-on:
-  pull_request:
-    branches: [deploy_dashboard_app]
-  push:
-    branches: [deploy_dashboard_app]
+# on:
+#   pull_request:
+#     branches: [deploy_dashboard_app]
+#   push:
+#     branches: [deploy_dashboard_app]
 
-defaults:
-  run:
-    working-directory: ./apps/dashboard-app
+# defaults:
+#   run:
+#     working-directory: ./apps/dashboard-app
 
-jobs:
-  # Step 1: Build the React App
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   # Step 1: Build the React App
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      # Checkout the repository code
-      - name: Checkout Code
-        uses: actions/checkout@v3
+#     steps:
+#       # Checkout the repository code
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
 
-      # Debug: List files in the root of the repository to confirm structure
-      # List the entire directory structure of the repository to verify if apps/dashboard-app exists
-      - name: List files in the root directory
-        run: |
-          echo "Listing files in the root of the repository"
-          tree -L 3
+#       # Debug: List files in the root of the repository to confirm structure
+#       # List the entire directory structure of the repository to verify if apps/dashboard-app exists
+#       - name: List files in the root directory
+#         run: |
+#           echo "Listing files in the root of the repository"
+#           tree -L 3
 
-      # Step 2: Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20" # Use the correct Node.js version
+#       # Step 2: Set up Node.js environment
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: "20" # Use the correct Node.js version
 
-      # Cache npm dependencies to speed up the build
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
+#       # Cache npm dependencies to speed up the build
+#       - name: Cache node modules
+#         uses: actions/cache@v3
+#         with:
+#           path: ~/.npm
+#           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-modules-
 
-      # Install dependencies
-      - name: Install Dependencies
-        run: |
-          npm install
+#       # Install dependencies
+#       - name: Install Dependencies
+#         run: |
+#           npm install
 
-      # Set environment variables
-      # - name: Set environment variables from GitHub Secrets
-      #   run: |
-      #     echo "REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}" >> .env
+#       # Set environment variables
+#       # - name: Set environment variables from GitHub Secrets
+#       #   run: |
+#       #     echo "REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}" >> .env
 
-      # Build React app using Webpack
-      - name: Build React App
-        run: |
-          npm run build
+#       # Build React app using Webpack
+#       - name: Build React App
+#         run: |
+#           npm run build
 
-      # List files after build to check the build folder
-      # - name: List files after build
-      #   run: |
-      #     echo "Listing files in the directory after build"
-      #     tree -L 2 ./
+#       # List files after build to check the build folder
+#       # - name: List files after build
+#       #   run: |
+#       #     echo "Listing files in the directory after build"
+#       #     tree -L 2 ./
 
-  # Step 2: Deploy to AWS S3
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build # Make sure the build job is successful before deploying
-    if: success() # Only deploy if the build was successful
+#   # Step 2: Deploy to AWS S3
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build # Make sure the build job is successful before deploying
+#     if: success() # Only deploy if the build was successful
 
-    steps:
-      # step 1:  Checkout the repository code
-      - name: Checkout Code
-        uses: actions/checkout@v3
+#     steps:
+#       # step 1:  Checkout the repository code
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
 
-      # step 2: Debug: List files in the root directory again
-      - name: List files in the root directory again
-        run: |
-          echo "Listing files in the root of the repository"
-          tree -L 2  # Confirm directory structure
+#       # step 2: Debug: List files in the root directory again
+#       - name: List files in the root directory again
+#         run: |
+#           echo "Listing files in the root of the repository"
+#           tree -L 2  # Confirm directory structure
 
-      # step 3: Install dependencies
-      - name: Install Dependencies
-        run: |
-          npm install
+#       # step 3: Install dependencies
+#       - name: Install Dependencies
+#         run: |
+#           npm install
 
-      # step 4: Build app for Deploy to S3
-      - name: Build React App
-        run: |
-          npm run build
+#       # step 4: Build app for Deploy to S3
+#       - name: Build React App
+#         run: |
+#           npm run build
 
-      # step 5: in build folder
-      - name: List files in build folder
-        run: |
-          echo "Listing files in the directory after build"
-          tree -L 2 ./build
+#       # step 5: in build folder
+#       - name: List files in build folder
+#         run: |
+#           echo "Listing files in the directory after build"
+#           tree -L 2 ./build
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ADMIN }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ADMIN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v4
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ADMIN }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ADMIN }}
+#           aws-region: ${{ secrets.AWS_REGION }}
 
-      # step 6: Deploy to S3 using AWS CLI
-      - name: Deploy to S3 using AWS CLI
-        run: |
-          aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }}
+#       # step 6: Deploy to S3 using AWS CLI
+#       - name: Deploy to S3 using AWS CLI
+#         run: |
+#           aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }}
 
-      # Optional: Invalidate CloudFront cache (if using CloudFront)
-      - name: Invalidate CloudFront Cache
-        if: success()
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
-        env:
-          AWS_ACCESS_KEY_ID_ADMIN: ${{ secrets.AWS_ACCESS_KEY_ID_ADMIN }}
-          AWS_SECRET_ACCESS_KEY_ADMIN: ${{ secrets.AWS_SECRET_ACCESS_KEY_ADMIN }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+#       # Optional: Invalidate CloudFront cache (if using CloudFront)
+#       - name: Invalidate CloudFront Cache
+#         if: success()
+#         run: |
+#           aws cloudfront create-invalidation \
+#             --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} \
+#             --paths "/*"
+#         env:
+#           AWS_ACCESS_KEY_ID_ADMIN: ${{ secrets.AWS_ACCESS_KEY_ID_ADMIN }}
+#           AWS_SECRET_ACCESS_KEY_ADMIN: ${{ secrets.AWS_SECRET_ACCESS_KEY_ADMIN }}
+#           AWS_REGION: ${{ secrets.AWS_REGION }}
